"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-10-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-82:
	  No source revision, documentation only: sorted .info into direntries.


2007-10-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-81:
	  cleanup: Perm'd SUPPORT_NESTED_DEFINITION (stack in parse_context).


	* HACKT-00-01-04-main-00-81-80-merged-ACT-01-15:
	  Branch merge: -ACT-01 (rev. 15).  Summary:
	  First round of patches compatibility for ACT compatibility.
	  compile (haco): supports dialect flags to fine-tune compilation
		for minor language variants, see documentation.  
		For greatest ACT-conformity, pass -f ACT.  
	  All definitions must be exported before being used outside their
		home namespace, or pass -f export-all to revert to old way.
	  Added PRS attributes: comb, keeper, output, loadcap (all do nothing)
		PRS now supports #> arrow (flip and negate literals), 
		and prs<Vdd,GND> { ... } (syntax only).
	  Full support for @ internal nodes in PRS.  
	  PRS expr loops exceeding max now error out during create phase.  
	  prsim: (minor fix) fanout excludes duplicate rules. 
	  All the above documented and tested.  
	  Unresolved issues:
		deftype/chan bodies should not be optional (OK).
		relaxed template syntax is unchanged, but ACT uses '|'
		PRS literal FET-type parameter not yet supported, but
			can be worked around by defining fake pints.


2007-10-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-74-ACT-01-15:
	  Added PRS rule attributes: comb, keeper, output, loadcap, 
		some of which remain unimplemented as placeholders.  
		Files: Object/lang/PRS_attribute_{common,registry}.cc, 
			sim/prsim/ExprAlloc.cc
		Also documented, with minimal tests.  
	  Declaring this branch done, no major blockers left, unresolved