@@ -1,5 +1,5 @@
 # "src/Make.hchk-tail.am"
-#	$Id: Make.hchk-tail.am,v 1.17 2007/08/31 21:02:34 fang Exp $
+#	$Id: Make.hchk-tail.am,v 1.18 2007/10/08 21:09:07 fang Exp $
 #	vi: ft=automake
 # Makefile footer for enforcing header checks.  
 # Counterpart is "src/Make.hchk-head.am"
@@ -24,9 +24,9 @@ CXXPREPROCESS = $(CXXCOMPILE) -E
 # expects name of temporary file after -MF
 FAST_MAKEDEP_FLAGS = -MMD -MT $@ -MF
 PROMOTE_HEADER_DEPS = $(AWK) -f $(srcdir)/scripts/promote_header_deps.awk \
-	-v srcdir="$(HEADER_CHECK_SRCDIRS)"
-FILTER_HEADER_DEPS = $(SED) -e 's|[^ ]*config\.h||g' -e 's|[^ ]*\.cc||g' \
-	-e 's| /[^ ]*||g'
+	-v srcdir="$(HEADER_CHECK_SRCDIRS)" -v src="$<"
+FILTER_HEADER_DEPS = $(SED) -e 's|[^ ]*\.cc||g' -e 's| /[^ ]*||g'
+#	-e 's|[^ ]*config\.h||g' 
 FAKE_DEP_FILTER = $(GREP) "^#" | $(GREP) -v '\"/' | $(GREP) -v '\"<' | \
 	$(GREP) -v pragma | $(AWK) '{print $$3;}' | $(SORT) -u
 # first filter -- removes any dependencies on config.h for efficiency
